--- a/manuscript/methods.qmd
+++ b/manuscript/methods.qmd
@@ -77,49 +77,42 @@ Microclimate data was recorded continuously every 15 minutes, between July 2019 
 
 In 2022, standing biomass was harvested at peak growing season in all plots that were not clipped or grazed. The biomass was harvested 2-3 cm above the ground, sorted to plant functional groups (graminoids with Cyperaceae sorted separately, forbs, legumes, shrubs, bryophytes, lichen and litter as dead unattached plant material), dried at 65 °C for 72 h and weighed. For standing biomass, the biomass of all plant functional groups were summed, except for plant litter.
 
-Plant species composition was recorded annually at peak growing season in all plots before the treatment in 2019 and after 3 years in 2022. We visually estimated the percentage cover of all vascular plant species to the nearest 1 % on the 25 x 25 cm inner area of each plot. The total coverage in each plot can exceed 100 %, due to layering of the vegetation. For species identification we followed the nomenclature from Lid & Lid [@Lid2010-ck].
-
-<!-- remove 150? -->
+Plant species composition was recorded annually at peak growing season in all plots before the treatment in 2019 and after 3 years in 2022. We visually estimated the percentage cover of all vascular plant species to the nearest 1 % on the 25 x 25 cm inner area of each plot. The total coverage in each plot can exceed 100 %, due to layering of the vegetation. For species identification we followed the nomenclature from Lid & Lid @Lid2010-ck.
 
 Plant height was collected at peak growing season in 2022 for the species making up 80 % of the total species coverage in a subset of plots. The data was collected from ambient and warmed plots that received 0, 5, 10, or 50 kg N ha^-1^ y^-1^ of nitrogen and ambient and warmed plots that were grazed (n = 40 plots). Vegetative plant height was measured as the unstreched plant height from the ground to the highest photosynthetic tissue on the plant from up to five individuals per species and plot (n = x individual measurements). For more details on the measurements see (Vandvik PFTC6 data paper).
 
-Ellenberg indicator values for light, temperature, nitrogen, and moisture were extracted from a database for European vascular plants (Tichy et al. 2022).
+Ellenberg indicator values for light, temperature, nitrogen, and moisture were extracted from a database for European vascular plants [@tichy2023ellenberg].
 
 ### Statistical analysis
 
 Standing biomass was estimated in all plots pre-treatment (2019) and after 3 years of treatment (2022) by multiplying vascular plant cover and vegetation height. The data was then back-transformed to weight per area (kg m^-2^) by using the standing biomass collected in the unclipped and ungrazed control plots in 2022 (n = 40). We first run a linear regression for all unclipped and ungrazed control plots with standing biomass as response and cover x height and the interaction of warming, log transformed nitrogen addition, and grazing as predictors. We compared the AIC's from models with all combinations of these predictors to find the most parsimonious model. The model with the lowest AIC contained cover x height and log transformed nitrogen addition (R^2^ = 0.87). The regression coefficients from these models were then used to back transform the cover x height in all plots to standing biomass (kg m^-2^; Fig. S4). Separate models were run for 2019 and 2022.
 
-To test if warming, nitrogen addition and clipping affect standing biomass, we used a fixed effects linear model with a normal error distribution. The model contained standing biomass as response and origin site of the plant community and a three-way interaction of warming, nitrogen addition and clipping as predictors. The experimental design did not allow running a mixed-effects model, because there is no replication at the plot level. Clipping was transformed to a numerical scale with 0 (control), 2 (intermediate) or 4 (intensive) cuts per growing season. The nitrogen levels we chose ranged from low to very high levels and they were unevenly distributed on a linear scale. We did not expect linear responses along this nitrogen gradient and therefore used three models that differed in the nitrogen addition treatment term, reflecting separate assumptions for the response to nitrogen addition: a) a linear term as a null model (N), b) a logarithmic term (log(N)) to account for the uneven distribution of the nitrogen levels, and c) a quadratic term (N^2^) allowing for a concave/convex relationship (REF). To find the most parsimonious model, we compared the AIC values of all three models and chose the one with the lowest AIC values. If the models differed in 𝚫AIC ≤ 2, we chose the simplest model. We preferred the logarithmic before the linear model, because it reflects a more realistic assumption than the null model. The most parsimonious model for standing biomass was the logarithmic model.
+To test if warming, nitrogen addition and clipping affect standing biomass at the end of the experiment (2022), we used a fixed effects linear model with a normal error distribution. The model contained standing biomass as response and origin site of the plant community and a three-way interaction of warming, nitrogen addition and clipping as predictors. The experimental design did not allow running a mixed-effects model, because there is no replication at the plot level. Clipping was transformed to a numerical scale with 0 (control), 2 (intermediate) or 4 (intensive) cuts per growing season. The nitrogen levels we chose ranged from low to very high levels and they were unevenly distributed on a linear scale. We did not expect linear responses along this nitrogen gradient and therefore used three models that differed in the nitrogen addition treatment term, reflecting separate assumptions for the response to nitrogen addition: a) a linear term as a null model (N), b) a logarithmic term (log(N)) to account for the uneven distribution of the nitrogen levels, and c) a quadratic term (N^2^) allowing for a concave/convex relationship. To find the most parsimonious model, we compared the AIC values of all three models and chose the one with the lowest AIC values. If the models differed in 𝚫AIC ≤ 2, we chose the simplest model. We preferred the logarithmic before the linear model, because it reflects a more realistic assumption than the null model. The most parsimonious model for standing biomass was the logarithmic model.
 
-Explain here that site has a very strong effect, because they are very different, so we continue with separate analysis by site? Use the same model, not including site as described above to test how global change affects standing biomass at each site separately.
+We ran the analysis first across both sites including site as a co-variate and then separately for the alpine and sub-alpine site. This was done because the two site differed strongly in how they respond to the three global change drivers and we were interested to understand if different drivers play different roles at these sites and if their interactions are more important at one of the sites.
 
-<!-- Do we want all diversity indices? -->
+To test if warming, nitrogen addition and clipping affect plant diversity at the end of the experiment (2022), we calculated the following diversity indices: species richness (n; number of species), Shannon diversity $H' = -\Sigma_{i} p_{i} * ln(p_{i})$, where $p_{i}$ is the proportional abundance of species i) and species evenness $\frac{H'}{log(n)}$ using the vegan package [@oksanen2022vegan]. For each of these response variables we used the same model approach as described above for standing biomass, also running the model first across and then separately for each site. For diversity the most parsimonious model was the linear model.
 
-We calculated the following diversity indices: species richness (n; number of species), Shannon diversity $H' = -\Sigma_{i} p_{i} * ln(p_{i})$, where $p_{i}$ is the proportional abundance of species i) and species evenness $\frac{H'}{log(n)}$ using the vegan package (REF). For each of these response variables we used the same model approach as described above. For diversity the most parsimonious model was the linear model.
+<!--# From here we ran all analysis for final biomass/diversity and change in biomass/diversity (log ratio). Do we want to keep both of these analysis? They are similar, but some differences... -->
 
-<!-- How much better is model when biomass is included? And do we need interactions? -->
+To understand the relationship between standing biomass and Shannon diversity, we run a fixed effects linear model with a normal error distribution. Diveresity was the response and the interaction of standing biomass and site as predictors. (We also ran it with warming as predictor... should we describe both models or just one of them...?). (Justify, why we ignore the drivers here?).
 
-Run different models with standing biomass, main effects and interactions and calculate the variance explained by the different components.
+To test if warming, nitrogen addition and clipping affect plant diversity directly and/or indirectly via standing biomass, we used structural equation models (SEM). First, we checked how important the interactions of the three global drivers are. For this we compared three linear models with Shannon diversity as response and including the following predictors: 1) only the main effects, warming, nitrogen addition and clipping, 2) the main effects and their interactions, and 3) the main effects and standing biomass (log transformed). We ran these models separately for each site and compared them using AIC values. (Do I explain the results here or in the results?)
 
-To test if warming, nitrogen addition and clipping affect plant diversity directly and/or indirectly via standing biomass, we used structural equation models (SEM). We used standing biomass and diversity at the end of the experiment. Nitrogen addition was log transformed and grazing was coded as a numeric variable representing the number of times the plot was clipped (see above). <!-- Do we run 4 SEMs here or only for the 2 sites? --> To test the importance of site (i.e. alpine vs. sub-alpine) and because site could not be included as a random effect in the model (n = 2), we ran four separate SEMs for (i) across sites, (ii) including site as covariate in the SEM, (iii) one for the alpine, and (iv) the sub-alpine site. We ran separate SEMs for Shannon diversity, species richness, and evenness (see above). We repeated the SEMs described above for grazing (grazing and exclosure) instead of the clipping treatment). All SEMs were run using piecewiseSEM (Lefcheck, 2016).
+Second, to test if the three global change drivers affect diversity directly or operate through biomass, we ran separate SEMs for each site (see model below). Nitrogen addition was log transformed and grazing was coded as a numeric variable representing the number of times the plot was clipped (see above). We ran separate SEMs for Shannon diversity, species richness, and evenness. We also repeated the SEMs described above for natural grazing (grazing and exclosure) instead of the clipping treatment. All SEMs were run using piecewiseSEM [@lefcheck2016piecewisesem].
 
 ```{r}
 #| label: model
 #| echo: true
 #| eval: false
 
-# model
 model <- psem(
   lm(diversity ~ biomass + warming + nitrogen + cutting, dat),
   lm(biomass ~ warming + nitrogen + cutting, dat)
   )
 
-# site model
-model <- psem(
-  lm(diversity ~ biomass + warming + nitrogen + cutting + site, dat),
-  lm(biomass ~ warming + nitrogen + cutting + site, dat)
-  )
-
 ```
 
-To understand the underlying mechanisms (i.e. change in abundance or colonization and extinctions) of change in biomass and/or diversity, we grouped all species occurring in the experiment into the following categories: *losers* (species that are present pre-treatment but not in the final year and thus go extinct), *decrease* (species that decrease in cover \> 10% between pre-treatment and the final year), *stable* (species that do not change in cover), *increase* (species that increase in cover \> 10% between pre-treatment and the final year), and *winners* (species that are not present pre-treatment but in the final year and colonize the plot). We then tested something…
+Need to add that we grouped by winner and losers!!
+
+To better understand the underlying mechanisms (i.e. change in abundance, colonization and extinctions) for how these drivers affect diversity we compared traits of *winners* and *losers* among the different global change treatments. For this, we grouped all species occurring in the experiment into the following categories: *going extinct* (species that are present pre-treatment but not in the final year and thus go extinct), *decrease* (species that decrease in cover \> 10% between pre-treatment and the final year), *stable* (species that do not change in cover), *increase* (species that increase in cover \> 10% between pre-treatment and the final year), and *colonizers* (species that are not present pre-treatment but in the final year and colonize the plot). For each species we compiled the following traits: plant height, Ellenberg light and temperature indicator values. We then calculated the community weighted trait means for each of these groups for using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping]. Finally, we tested if the global change drivers affect these community weighted trait means using a linear fixed effects model. We ran separate models for each trait as response and the interactions of the three drivers as predictors. The analysis was run separately for each site.
