--- a/manuscript/SI.qmd
+++ b/manuscript/SI.qmd
@@ -29,6 +29,49 @@ library(ggpubr)
 
 ## Methods
 
+### Supplementary Figure 1: Temperature effects on the microclimate 
+<!-- 2021 was the warmest and driest year with an average air temperature of 10.18 °C and 0.25 % soil moisture content. -->
+
+<!-- 2019 was the coldest and wettest year with an average air temperature of 6.18 °C and 0.4 % soil moisture content (Supplement Figure S1). -->
+
+```{r}
+#| label: fig-daily-climate
+#| warning: false
+#| fig-cap: a) Daily temperature and soil moisture values, measured over the period of the experiment in the alpine and sub-alpine sites and b) average summer temperature and soil moisture between May and September. Shown are air (30 cm), ground (0 cm), soil temperature (-5 cm), and soil moisture measured with Tomst loggers between August 2019 and October 2022. Colour indicates the ambient (grey) and warming (pink) treatment. Air, ground and soil temperature were higher and soil moisture was lower in the warming treatment, indicated by the star in each panel.
+
+tar_load(daily_climate_figure)
+daily_climate_figure
+
+```
+
+
+### Supplementary Table 1: Temperature effects on the microclimate
+
+```{r}
+#| label: tbl-climate-test
+#| tbl-cap: Results from linear regression of the effects of warming on air, ground, and soil temperature and soilmoisture at the alpine and sub-alpine communities. Shown are estimates, standard error, t statistics and P value.
+
+
+tar_load(microclimate_stats)
+microclimate_stats
+
+```
+
+
+### Supplementary Figure 4: Proportional functional group composition
+
+```{r}
+#| label: fig-biomass-fg
+#| warning: false
+#| fig-height: 5
+#| fig-cap: Proportion of biomass per plant functional group at peak growing season in 2022. Shown are the proportion of shrubs, graminoids (grasses and rushes), Cyperaceae (mostly Carex species), forbs, legumes, bryophytes, and litter, for the different nitrogen addition treatments in non-grazed (Control), medium and intensive grazed plots. The two top rows are the ambient and warmed plots in the alpine site, while the two lower rows are ambient and warmed plots at the subalpine site. The general pattern is that graminoids increase and forbs decrease with higher nitrogen addition treatment.
+
+tar_load(biomass_fun_group)
+biomass_fun_group
+
+```
+
+
 ### Calculating standing biomass
 
 Standing biomass is estimated from the community data using *sum of cover x vegetation height*. This estimated biomass is then backtransformed to actual biomass using the biomass collected at peak growing season in the control plots
