--- a/manuscript/methods.qmd
+++ b/manuscript/methods.qmd
@@ -59,7 +59,7 @@ cons <- consumption |>
 
 ```
 
-Three semi-natural, species rich, perennial grassland sites (469, 920, and 1290 m a.s.l.) were established along an elevational gradient in Western Norway (@fig-concept c; 7.17°E, 60.88°N). Effectively, the experimental design has only two sites (alpine and sub-alpine), because the lowland site received only transplanted communities (warming treatment crossed with grazing and nitrogen, see below). The sites were 400 m apart in elevation, corresponding to a temperature difference of approximately 3°C in summer air, ground and soil temperature over the duration of the experiment (air temperature; alpine: `r ta$mean[1]` ± `r ta$se[1]` °C; sub-alpine `r ta$mean[2]` ± `r ta$se[2]` °C; lowland: `r ta$mean[3]` ± `r ta$se[3]` °C, *in situ* measurement between May - September in 2019-2022; Figure S1). Annual precipitation was similar at the two lowest sites and approximately 800 mm higher at the highest site (alpine: 2089 mm; sub-alpine 1256 mm; lowland: 1292 mm; modeled climate data from the period of 2008 - 2021 by Norwegian Meteorological Institute, met.no). The sites were located on calcareous bedrock with loamy sand and grazed by sheep, goats and deer at the lowland and sub-alpine sites, and mainly sheep and reindeer at the alpine site. Annual plant productivity is similar at the lowland and sub-alpine site (`r prod$mean[1]` ± `r prod$se[1]` g m^-2^ y^-1^, `r prod$mean[2]` ± `r prod$se[2]` g m^-2^ y^-1^, respectively) and about four times lower at the alpine site (`r prod$mean[3]` ± `r prod$se[3]` g m^-2^ y^-1^) (Figure S2a). Grazing pressure is 3 - 5 time higher in the sub-alpine site (`r cons$mean[2]` ± `r cons$se[2]` g m2 y-1, 1) compared to the lowland (`r cons$mean[1]` ± `r cons$se[1]` g m2 y-1) and alpine site (`r cons$mean[3]` ± `r cons$se[3]` g m2 y-1; Figure S2b). Other factors such as land-use history, vegetation type, slope and exposure were kept as constant as possible. To simulate the natural grazing regime at each site, and to avoid accumulation of biomass, the biomass within the fence was removed at the end of each field season.
+Three semi-natural, species rich, perennial grassland sites (469, 920, and 1290 m a.s.l.) were established along an elevational gradient in Western Norway (@fig-concept c; 7.17°E, 60.88°N). Effectively, the experimental design has only two sites (alpine and sub-alpine), because the lowland site received only transplanted communities (warming treatment crossed with grazing and nitrogen, see below). The sites were 400 m apart in elevation, corresponding to a temperature difference of approximately 3°C in summer air, ground and soil temperature over the duration of the experiment (air temperature; alpine: `r ta$mean[1]` ± `r ta$se[1]` °C; sub-alpine `r ta$mean[2]` ± `r ta$se[2]` °C; lowland: `r ta$mean[3]` ± `r ta$se[3]` °C, *in situ* measurement between May - September in 2019-2022; Supplementry Figure S1). Annual precipitation was similar at the two lowest sites and approximately 800 mm higher at the highest site (alpine: 2089 mm; sub-alpine 1256 mm; lowland: 1292 mm; modeled climate data from the period of 2008 - 2021 by Norwegian Meteorological Institute, met.no). The sites were located on calcareous bedrock with loamy sand and grazed by sheep, goats and deer at the lowland and sub-alpine sites, and mainly sheep and reindeer at the alpine site. Annual plant productivity is similar at the lowland and sub-alpine site (`r prod$mean[1]` ± `r prod$se[1]` g m^-2^ y^-1^, `r prod$mean[2]` ± `r prod$se[2]` g m^-2^ y^-1^, respectively) and about four times lower at the alpine site (`r prod$mean[3]` ± `r prod$se[3]` g m^-2^ y^-1^) (Supplementary Figure S2a). Grazing pressure is 3 - 5 time higher in the sub-alpine site (`r cons$mean[2]` ± `r cons$se[2]` g m2 y-1, 1) compared to the lowland (`r cons$mean[1]` ± `r cons$se[1]` g m2 y-1) and alpine site (`r cons$mean[3]` ± `r cons$se[3]` g m2 y-1; Supplementary Figure S2b). Other factors such as land-use history, vegetation type, slope and exposure were kept as constant as possible. To simulate the natural grazing regime at each site, and to avoid accumulation of biomass, the biomass within the fence was removed at the end of each field season.
 
 In summer 2019, ten experimental blocks containing six 50 x 50 cm plots were established at each site (@fig-concept c) and fenced in early spring 2020. In addition, two plots per block were located outside the fence (n = 160). Each plot received a combination of warming, nitrogen addition and grazing treatments in two steps. First, each block was randomly assigned a nitrogen level, to avoid nitrogen contamination between the plots within the blocks. Second, the warming and grazing treatments were randomized within each block, with the exception of the naturally grazed plots, that were located outside the fenced area (for more details see ThreeD data paper).
 
@@ -73,33 +73,88 @@ In 2020, the intensive grazing plots at the highest alpine site was only cut thr
 
 ### Data collection
 
-Microclimate data was recorded continuously every 15 minutes, between July 2019 and September 2022, using Tomst TM4 loggers [@Wild2019-nk]. Air, ground and soil temperature as well as soil moisture were measured at 15, 0 cm above and -6 cm below the ground in all warming and grazing treatments inside the fence and at 0, 1, 10, and 100 kg N ha^-1^ y^-1^ (n = 72 loggers). At the alpine site, the block with 0.5 kg N ha^-1^ y^-1^ also received climate loggers, because this block is located further away from the rest and we wanted to make sure to catch any difference in the microclimate. The warming treatment increased air, ground and soil temperature by c. 3 °C and decreased soil moisture (Figure S1 and S8, Table S8), but nitrogen addition and grazing had no effect on the microclimate (Figure S8, Table S8).
+Microclimate data was recorded continuously every 15 minutes, between July 2019 and September 2022, using Tomst TM4 loggers [@Wild2019-nk]. Air, ground and soil temperature as well as soil moisture were measured at 15, 0 cm above and -6 cm below the ground in all warming and grazing treatments inside the fence and at 0, 1, 10, and 100 kg N ha^-1^ y^-1^ (n = 72 loggers). At the alpine site, the block with 0.5 kg N ha^-1^ y^-1^ also received climate loggers, because this block is located further away from the rest and we wanted to make sure to catch any difference in the microclimate. The warming treatment increased air, ground and soil temperature by c. 3 °C and decreased soil moisture (Supplement Figures S1 and S3, Table S2), but nitrogen addition and grazing had no effect on the microclimate (Supplementary Figure S3, Table S2).
 
 In 2022, standing biomass was harvested at peak growing season in all plots that were not clipped or grazed. The biomass was harvested 2-3 cm above the ground, sorted to plant functional groups (graminoids with Cyperaceae sorted separately, forbs, legumes, shrubs, bryophytes, lichen and litter as dead unattached plant material), dried at 65 °C for 72 h and weighed. For standing biomass, the biomass of all plant functional groups were summed, except for plant litter.
 
 Plant species composition was recorded annually at peak growing season in all plots before the treatment in 2019 and after 3 years in 2022. We visually estimated the percentage cover of all vascular plant species to the nearest 1 % on the 25 x 25 cm inner area of each plot. The total coverage in each plot can exceed 100 %, due to layering of the vegetation. For species identification we followed the nomenclature from Lid & Lid @Lid2010-ck.
 
-Plant height was collected at peak growing season in 2022 for the species making up 80 % of the total species coverage in a subset of plots. The data was collected from ambient and warmed plots that received 0, 5, 10, or 50 kg N ha^-1^ y^-1^ of nitrogen and ambient and warmed plots that were grazed (n = 40 plots). Vegetative plant height was measured as the unstreched plant height from the ground to the highest photosynthetic tissue on the plant from up to five individuals per species and plot (n = x individual measurements). For more details on the measurements see (Vandvik PFTC6 data paper).
-
-Ellenberg indicator values for light, temperature, nitrogen, and moisture were extracted from a database for European vascular plants [@tichy2023ellenberg].
+Plant height was collected at peak growing season in 2022 for the species making up 80 % of the total species coverage in a subset of plots. The data was collected from ambient and warmed plots that received 0, 5, 10, or 50 kg N ha^-1^ y^-1^ of nitrogen and ambient and warmed plots that were grazed (n = 40 plots). Vegetative plant height was measured as the unstreched plant height from the ground to the highest photosynthetic tissue on the plant from up to five individuals per species and plot (n = x individual measurements). For more details on the measurements see (Vandvik PFTC6 data paper). Ellenberg indicator values for light, temperature, nitrogen, and moisture were extracted from a database for European vascular plants [@tichy2023ellenberg].
 
 ### Statistical analysis
 
-Standing biomass was estimated in all plots pre-treatment (2019) and after 3 years of treatment (2022) by multiplying vascular plant cover and vegetation height. The data was then back-transformed to weight per area (kg m^-2^) by using the standing biomass collected in the unclipped and ungrazed control plots in 2022 (n = 40). We first run a linear regression for all unclipped and ungrazed control plots with standing biomass as response and cover x height and the interaction of warming, log transformed nitrogen addition, and grazing as predictors. We compared the AIC's from models with all combinations of these predictors to find the most parsimonious model. The model with the lowest AIC contained cover x height and log transformed nitrogen addition (R^2^ = 0.87). The regression coefficients from these models were then used to back transform the cover x height in all plots to standing biomass (kg m^-2^; Fig. S4). Separate models were run for 2019 and 2022.
+Standing biomass was estimated in all plots pre-treatment (2019) and after 3 years of treatment (2022) by multiplying vascular plant cover and vegetation height. The data was then back-transformed to weight per area (kg m^-2^) by using the standing biomass collected in the unclipped and ungrazed control plots in 2022 (n = 40). We first run a linear regression for all unclipped and ungrazed control plots with standing biomass as response and cover x height and the interaction of warming, log transformed nitrogen addition, and grazing as predictors. We compared the AIC's from models with all combinations of these predictors to find the most parsimonious model. The model with the lowest AIC contained cover x height and log transformed nitrogen addition (R^2^ = 0.87). The regression coefficients from these models were then used to back transform the cover x height in all plots to standing biomass (kg m^-2^; Supplementary Figure S4, Table S3). Separate models were run for 2019 and 2022.
 
-To test if warming, nitrogen addition and clipping affect standing biomass at the end of the experiment (2022), we used a fixed effects linear model with a normal error distribution. The model contained standing biomass as response and origin site of the plant community and a three-way interaction of warming, nitrogen addition and clipping as predictors. The experimental design did not allow running a mixed-effects model, because there is no replication at the plot level. Clipping was transformed to a numerical scale with 0 (control), 2 (intermediate) or 4 (intensive) cuts per growing season. The nitrogen levels we chose ranged from low to very high levels and they were unevenly distributed on a linear scale. We did not expect linear responses along this nitrogen gradient and therefore used three models that differed in the nitrogen addition treatment term, reflecting separate assumptions for the response to nitrogen addition: a) a linear term as a null model (N), b) a logarithmic term (log(N)) to account for the uneven distribution of the nitrogen levels, and c) a quadratic term (N^2^) allowing for a concave/convex relationship. To find the most parsimonious model, we compared the AIC values of all three models and chose the one with the lowest AIC values. If the models differed in 𝚫AIC ≤ 2, we chose the simplest model. We preferred the logarithmic before the linear model, because it reflects a more realistic assumption than the null model. The most parsimonious model for standing biomass was the logarithmic model.
+To test if warming, nitrogen addition and clipping affect standing biomass after three years of treatment in 2022, we used a fixed effects linear model with a normal error distribution. The model contained standing biomass as response and origin site of the plant community and a three-way interaction of warming, nitrogen addition and clipping as predictors. The experimental design did not allow running a mixed-effects model, because there is no replication at the plot level. Clipping was transformed to a numerical scale with 0 (control), 2 (intermediate) or 4 (intensive) cuts per growing season. The nitrogen levels we chose ranged from low to very high levels and they were unevenly distributed on a linear scale. We did not expect linear responses along this nitrogen gradient and therefore used three models that differed in the nitrogen addition treatment term, reflecting separate assumptions for the response to nitrogen addition: a) a linear term as a null model (N), b) a logarithmic term (log(N)) to account for the uneven distribution of the nitrogen levels, and c) a quadratic term (N^2^) allowing for a concave/convex relationship. To find the most parsimonious model, we compared the AIC values of all three models and chose the one with the lowest AIC values. If the models differed in 𝚫AIC ≤ 2, we chose the simplest model. We preferred the logarithmic before the linear model, because it reflects a more realistic assumption than the null model. The most parsimonious model for standing biomass was the logarithmic model.
 
-We ran the analysis first across both sites including site as a co-variate and then separately for the alpine and sub-alpine site. This was done because the two site differed strongly in how they respond to the three global change drivers and we were interested to understand if different drivers play different roles at these sites and if their interactions are more important at one of the sites.
+<!--# How to explain this? -->
+
+We ran the analysis first across both sites including site as a co-variate and then separately for the alpine and sub-alpine site. This was done because the two site differed strongly in their productivity and diversity and how they respond to the three global change drivers and we were interested to understand if different drivers play different roles at these sites and if their interactions are more important at one of the sites.
 
 To test if warming, nitrogen addition and clipping affect plant diversity at the end of the experiment (2022), we calculated the following diversity indices: species richness (n; number of species), Shannon diversity $H' = -\Sigma_{i} p_{i} * ln(p_{i})$, where $p_{i}$ is the proportional abundance of species i) and species evenness $\frac{H'}{log(n)}$ using the vegan package [@oksanen2022vegan]. For each of these response variables we used the same model approach as described above for standing biomass, also running the model first across and then separately for each site. For diversity the most parsimonious model was the linear model.
 
 <!--# From here we ran all analysis for final biomass/diversity and change in biomass/diversity (log ratio). Do we want to keep both of these analysis? They are similar, but some differences... -->
 
-To understand the relationship between standing biomass and Shannon diversity, we run a fixed effects linear model with a normal error distribution. Diveresity was the response and the interaction of standing biomass and site as predictors. (We also ran it with warming as predictor... should we describe both models or just one of them...?). (Justify, why we ignore the drivers here?).
+To test the relationship between standing biomass and Shannon diversity, we run a fixed effects linear model with a normal error distribution. Diveresity was the response and the interaction of standing biomass and site the predictors. (We also ran it with warming as predictor... should we describe both models or just one of them...?). (Justify, why we ignore the drivers here?).
 
-To test if warming, nitrogen addition and clipping affect plant diversity directly and/or indirectly via standing biomass, we used structural equation models (SEM). First, we checked how important the interactions of the three global drivers are. For this we compared three linear models with Shannon diversity as response and including the following predictors: 1) only the main effects, warming, nitrogen addition and clipping, 2) the main effects and their interactions, and 3) the main effects and standing biomass (log transformed). We ran these models separately for each site and compared them using AIC values. (Do I explain the results here or in the results?)
+To test if the three global change drivers affect Shannon diversity through the same mechanisms, i.e. standing biomass, we first tested how important it was to add the interactions of the global change drivers in the model. For this we compared three linear models with Shannon diversity as response and including the following predictors: 1) only the main effects, warming, nitrogen addition and clipping, 2) the main effects and their interactions, and 3) the main effects and standing biomass (log transformed). We ran these models separately for each site and compared them using AIC values. At the alpine site, adding standing biomass or the interactions between the drivers improved the model equally well, by ca. 2.5 AIC units (@tbl-var-explained). However at the sub-alpine site, the best model was the main effects model only. We decided therefore decided that dropping the interactions of the global change drivers from further was justified.
 
-Second, to test if the three global change drivers affect diversity directly or operate through biomass, we ran separate SEMs for each site (see model below). Nitrogen addition was log transformed and grazing was coded as a numeric variable representing the number of times the plot was clipped (see above). We ran separate SEMs for Shannon diversity, species richness, and evenness. We also repeated the SEMs described above for natural grazing (grazing and exclosure) instead of the clipping treatment. All SEMs were run using piecewiseSEM [@lefcheck2016piecewisesem].
+```{r}
+#| label: tbl-var-explained
+#| echo: false
+#| tbl-cap: Model comparisions and AIC values.
+
+tar_load(biomass_div, store = here::here(tar_config_get("store")))
+
+all <- biomass_div |> 
+  nest() |>
+  mutate(#bio = map(data, ~lm(final_diversity ~ final_bio, data = .)),
+         main = map(data, ~lm(final_diversity ~ warming + grazing_num + Namount_kg_ha_y, data = .)),
+         biomain = map(data, ~lm(final_diversity ~ final_bio + warming + grazing_num + Namount_kg_ha_y, data = .)),
+         #interaction = map(data, ~lm(final_diversity ~ warming:grazing_num + warming:Namount_kg_ha_y + grazing_num:Namount_kg_ha_y + warming:grazing_num:Namount_kg_ha_y, data = .)),
+         full = map(data, ~lm(final_diversity ~ warming * grazing_num * Namount_kg_ha_y, data = .))
+         #biofull = map(data, ~lm(final_diversity ~ final_bio + warming * grazing_num * Namount_kg_ha_y, data = .))
+         ) |>
+  mutate(main = map(main, glance),
+         biomain = map(biomain, glance),
+         full = map(full, glance)) |>
+  rename("main effects" = main, "main effects + biomass" = biomain, "main effects + interactions" = full) |> 
+  # make long table
+        pivot_longer(cols = -c(data),
+                     names_to = "model",
+                     values_to = "glance") |> 
+  mutate(origSiteID = "Both")
+
+
+site <- biomass_div |> 
+  group_by(origSiteID) |>
+  nest() |>
+  mutate(#bio = map(data, ~lm(final_diversity ~ final_bio, data = .)),
+         main = map(data, ~lm(final_diversity ~ warming + grazing_num + Namount_kg_ha_y, data = .)),
+         biomain = map(data, ~lm(final_diversity ~ final_bio + warming + grazing_num + Namount_kg_ha_y, data = .)),
+         #interaction = map(data, ~lm(final_diversity ~ warming:grazing_num + warming:Namount_kg_ha_y + grazing_num:Namount_kg_ha_y + warming:grazing_num:Namount_kg_ha_y, data = .))
+         full = map(data, ~lm(final_diversity ~ warming * grazing_num * Namount_kg_ha_y, data = .)),
+         #biofull = map(data, ~lm(final_diversity ~ final_bio + warming * grazing_num * Namount_kg_ha_y, data = .))
+         ) |>
+  mutate(main = map(main, glance),
+         biomain = map(biomain, glance),
+         full = map(full, glance)) |>
+  rename("main effects" = main, "main effects + biomass" = biomain, "main effects + interactions" = full) |> 
+  # make long table
+        pivot_longer(cols = -c(origSiteID, data),
+                     names_to = "model",
+                     values_to = "glance")
+site |> 
+  unnest(glance) |> 
+  select(origSiteID, model, r.squared, adj.r.squared, AIC) |> 
+  mutate(r.squared = round(r.squared, 2),
+         adj.r.squared = round(adj.r.squared, 2),
+         AIC = round(AIC, 2)) |>
+  gt()
+
+```
+
+To test if warming, nitrogen addition and clipping affect plant diversity directly and/or indirectly via standing biomass, we ran separate structural equation models (SEM) for each site (see model below). Nitrogen addition was log transformed and grazing was coded as a numeric variable representing the number of times the plot was clipped (see above). We ran separate SEMs for Shannon diversity, species richness, and evenness. We also repeated the SEMs described above for natural grazing (grazing and exclosure) instead of the clipping treatment. All SEMs were run using piecewiseSEM [@lefcheck2016piecewisesem].
 
 ```{r}
 #| label: model
@@ -115,4 +170,8 @@ model <- psem(
 
 Need to add that we grouped by winner and losers!!
 
-To better understand the underlying mechanisms (i.e. change in abundance, colonization and extinctions) for how these drivers affect diversity we compared traits of *winners* and *losers* among the different global change treatments. For this, we grouped all species occurring in the experiment into the following categories: *going extinct* (species that are present pre-treatment but not in the final year and thus go extinct), *decrease* (species that decrease in cover \> 10% between pre-treatment and the final year), *stable* (species that do not change in cover), *increase* (species that increase in cover \> 10% between pre-treatment and the final year), and *colonizers* (species that are not present pre-treatment but in the final year and colonize the plot). For each species we compiled the following traits: plant height, Ellenberg light and temperature indicator values. We then calculated the community weighted trait means for each of these groups for using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping]. Finally, we tested if the global change drivers affect these community weighted trait means using a linear fixed effects model. We ran separate models for each trait as response and the interactions of the three drivers as predictors. The analysis was run separately for each site.
+To better understand the underlying mechanisms, i.e. change in abundance, colonization and extinctions, for how the global change drivers affect diversity, we compared traits of *lose*r and *winner*. Species were classified as *losers* if they went *extinct* (species that are present pre-treatment but not in the final year and thus go extinct) or *decreased in cover* (species that decrease in cover \> 10% between pre-treatment and the final year). Contrary, species were classified as *winners* if they *colonized* the plots (species that are not present pre-treatment but in the final year and colonize the plot) or *increased* in cover (species that increase in cover \> 10% between pre-treatment and the final year). For each species we compiled the following traits: plant height, Ellenberg light and temperature indicator values. We then calculated the community weighted trait means for losers and winner using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping]. Finally, we tested if the global change drivers affect these community weighted trait means for losers and winners using a linear fixed effects model. We ran separate models for each trait as response and the interactions of the three drivers as predictors. The analysis was run separately for each site.
+
+Finally, the effect of grazing on diversity was calculated by the difference in diversity in the medium or intensive grazed plots and control plots. To test the relationship between the three global change drivers and diversity and how this relationship changes with standing biomass, we used a linear regression with a normal error distribution and the interactions of warming and nitrogen addition, and standing biomass in the control plots, as a baseline, as predictors and the effect of grazing on diversity as response. The analysis was done separately by site.
+
+<!--# If we ran the model without the other drivers we can say: We did not include warming and nitrogen addition in the model to avoid overfitting and because they are good predictors of standing biomass. -->
